yamls/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud7shisha-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud7shisha-db
  template:
    metadata:
      labels:
        app: cloud7shisha-db
    spec:
      volumes:
      - name: cloud7shisha-vol
        persistentVolumeClaim:
          claimName: cloud7shisha-pvc
      containers:
      - image: mongo
        name: db
        command:
        - mongod
        - "--bind_ip"
        - "0.0.0.0"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: cloud7shisha-vol
          mountPath: /data/db
