yamls/mongodb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: cloud7shisha-mongodb
spec:
  volumes:
  - name: cloud7shisha-mongo-vol
    persistentVolumeClaim:
      claimName: cloud7shisha-pvc
  containers:
  - image: mongo
    name: db
    command:
    - mongod
    - "--bind_ip"
    - "0.0.0.0"
    ports:
    - containerPort: 27017
    volumeMounts:
    - name: cloud7shisha-mongo-vol
      mountPath: /data/db
