yamls/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: cloud7shisha-server
  type: ClusterIP
