yamls/cl7-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: cloud7shisha-web
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
