yamls/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloud7shisha-mongodb
  name: mongodb-service
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: cloud7shisha-mongodb
